# panim

./: .gitignore  README.md  install_prod.sh  pyproject.toml  run.sh  run_inference.sh
data/test/: test.json
data/train/: train.json
inference/: api.py  model.py
inst/faq/: general.json  help.json  installation.json  internals.json  opengl.json
inst/guides/: add_voiceovers.json  configuration.json  deep_dive.json  using_text.json
inst/installation/: conda.json  docker.json  jupyter.json  uv.json
inst/reference/: reference.json
inst/tutorials/: building_blocks.json  output_and_config.json  quickstart.json
src/curate/: error.py  extract_text.py  generate_inst.py  prompt.py  provider.py  script.py
src/train/: merge_and_push.py  storage.py  train.py
