[project]
name = "panim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.5.0",
    "peft>=0.15.2",
    "torch>=2.6.0",
    "transformers>=4.51.3",
    "trl>=0.16.1",
    "wandb>=0.19.9",
    "bitsandbytes==0.45.5",
]

[project.optional-dependencies]
dev = [
    "beautifulsoup4>=4.13.3",
    "httpx>=0.28.1",
    "openai>=1.71.0",
    "fire>=0.7.0",
    "google-cloud-storage>=3.1.0",
    "google-genai>=1.10.0",
    "latex>=0.7.0",
    "manim>=0.19.0",
    "manimgl>=1.7.2",
    "sphinx>=8.1.3"

]

[tool.setuptools.packages.find]
where = ["./"]
include = ["src"]
